<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="za.enyagano.androidchallenge.MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="@font/amerika_pro"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="#FF9800"
        android:maxHeight="48dip"
        android:onClick="PageSwitch"
        android:text="@string/about_alc"
        android:textColor="#000000"
        android:textSize="24sp"
        app:fontFamily="@font/amerika_pro"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="#FF9800"
        android:maxHeight="48dip"
        android:onClick="PageSwitch"
        android:text="@string/my_profile"
        android:textColor="#000000"
        app:fontFamily="@font/amerika_pro"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="168dp" />

</RelativeLayout>
